--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,11 +40,14 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
 
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
 
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
 
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
 }
