--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.networkActivities.ResultActivity"></activity>
-        <activity android:name=".ui.testActivities.TestFromServerActivity" />
         <activity android:name=".temp.RoomTest" />
         <activity android:name=".ui.constructorActivities.ListOfTestsActivity" />
         <activity android:name=".ui.constructorActivities.ConstructorActivity" />
